[gd_scene load_steps=6 format=2]

[ext_resource path="res://music/sand_dungeon.ogg" type="AudioStream" id=1]
[ext_resource path="res://music/Maestro.gd" type="Script" id=2]
[ext_resource path="res://music/sand_dungeon_prison.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/battle_foreground.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/the_black_mask.ogg" type="AudioStream" id=5]

[node name="Maestro" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="sand_dungeon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Music"

[node name="sand_dungeon_prison" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="sand_dungeon_battle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
bus = "Music"

[node name="tween" type="Tween" parent="."]

[node name="the_blask_mask" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"
